bowtie/test/invalid-syntax-examples/duplicate-term-definitions.bowtie
duplicate-term-definitions.bowtie:8:1:
  |
8 | <empty line>
  | ^
Duplicate definitions found in module with name a
